[tool.poetry]
name = "pyblu"
version = "2.0.1"
description = ""
authors = ["Louis Christ <mail@louischrist.de>"]
repository = "https://github.com/LouisChrist/pyblu"
license = "MIT"
readme = "README.md"
packages = [
    { include = "pyblu", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.11"
lxml = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^25.1.0"
pytest = "^8.3.3"
aioresponses = "^0.7.8"
pytest-asyncio = "^0.24.0"
sphinx = "^8.1.3"
invoke = "^2.2.0"
semver = "^3.0.2"
mypy = "^1.13.0"
pygithub = "^2.5.0"
types-lxml = "^2024.12.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."messages control"]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 160

[tool.black]
line-length = 160

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
