[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyblu"
version = "2.0.3"
description = ""
license = "MIT"
authors = [{ name = "Louis Christ", email = "mail@louischrist.de" }]
readme = "README.md"
dependencies = [
    "aiohttp >= 3.11.11",
    "lxml >= 5.0.0"]

[project.urls]
repository = "https://github.com/LouisChrist/pyblu"

[tool.hatch.build.targets.wheel]
packages = ["src/pyblu"]

[tool.uv]
dev-dependencies = [
    "pylint >= 3.2.6",
    "black >= 24.8.0",
    "pytest >= 8.3.2",
    "aioresponses >= 0.7.6",
    "pytest-asyncio >= 0.24.0",
    "sphinx >= 8.0.2",
    "invoke >= 2.2.0",
    "semver >= 3.0.2",
    "mypy >= 1.11.2",
    "pygithub >= 2.4.0",
    "types-lxml >= 2024.8.7"]

[tool.pylint."messages control"]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 160

[tool.black]
line-length = 160

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
